fix: reduce blockquote vertical spacing and bump css cache version

--- a/assets/styles/tailwind.output.css
+++ b/assets/styles/tailwind.output.css
@@ -881,13 +881,13 @@ html {
   border-inline-start-width: 0.25rem;
   border-inline-start-color: var(--tw-prose-quote-borders);
   quotes: none;
-  margin-top: 1.5em;
-  margin-bottom: 1.5em;
+  margin-top: 0.4em;
+  margin-bottom: 0.4em;
   padding-inline-start: 1em;
   background-color: hsl(var(--b2) / 0.5);
   border-left-color: hsl(var(--p));
   border-left-width: 4px;
-  padding: 1em 1.5em;
+  padding: 0.1em 1.25em;
   border-radius: 0.375rem;
 }
 
@@ -1311,8 +1311,8 @@ html {
 }
 
 .prose :where(blockquote p):not(:where([class~="not-prose"],[class~="not-prose"] *)) {
-  margin-top: 0.5em;
-  margin-bottom: 0.5em;
+  margin-top: 0;
+  margin-bottom: 0;
   color: hsl(var(--bc) / 0.9);
 }
 
@@ -1334,8 +1334,8 @@ html {
 }
 
 .prose-sm :where(blockquote):not(:where([class~="not-prose"],[class~="not-prose"] *)) {
-  margin-top: 1.3333333em;
-  margin-bottom: 1.3333333em;
+  margin-top: 0.4em;
+  margin-bottom: 0.4em;
   padding-inline-start: 1.1111111em;
 }
 
@@ -1563,6 +1563,11 @@ html {
   margin-bottom: 0;
 }
 
+.prose-sm :where(blockquote p):not(:where([class~="not-prose"],[class~="not-prose"] *)) {
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
 .prose-lg {
   font-size: 1.125rem;
   line-height: 1.7777778;
@@ -1581,8 +1586,8 @@ html {
 }
 
 .prose-lg :where(blockquote):not(:where([class~="not-prose"],[class~="not-prose"] *)) {
-  margin-top: 1.6666667em;
-  margin-bottom: 1.6666667em;
+  margin-top: 0.4em;
+  margin-bottom: 0.4em;
   padding-inline-start: 1em;
 }
 
@@ -1807,6 +1812,11 @@ html {
 }
 
 .prose-lg :where(.prose-lg > :last-child):not(:where([class~="not-prose"],[class~="not-prose"] *)) {
+  margin-bottom: 0;
+}
+
+.prose-lg :where(blockquote p):not(:where([class~="not-prose"],[class~="not-prose"] *)) {
+  margin-top: 0;
   margin-bottom: 0;
 }
 
@@ -6551,13 +6561,13 @@ html:has(.drawer-toggle:checked) {
     border-inline-start-width: 0.25rem;
     border-inline-start-color: var(--tw-prose-quote-borders);
     quotes: none;
-    margin-top: 1.5em;
-    margin-bottom: 1.5em;
+    margin-top: 0.4em;
+    margin-bottom: 0.4em;
     padding-inline-start: 1em;
     background-color: hsl(var(--b2) / 0.5);
     border-left-color: hsl(var(--p));
     border-left-width: 4px;
-    padding: 1em 1.5em;
+    padding: 0.1em 1.25em;
     border-radius: 0.375rem;
   }
 
@@ -6981,8 +6991,8 @@ html:has(.drawer-toggle:checked) {
   }
 
   .sm\:prose :where(blockquote p):not(:where([class~="not-prose"],[class~="not-prose"] *)) {
-    margin-top: 0.5em;
-    margin-bottom: 0.5em;
+    margin-top: 0;
+    margin-bottom: 0;
     color: hsl(var(--bc) / 0.9);
   }
 
@@ -7069,8 +7079,8 @@ html:has(.drawer-toggle:checked) {
   }
 
   .lg\:prose-lg :where(blockquote):not(:where([class~="not-prose"],[class~="not-prose"] *)) {
-    margin-top: 1.6666667em;
-    margin-bottom: 1.6666667em;
+    margin-top: 0.4em;
+    margin-bottom: 0.4em;
     padding-inline-start: 1em;
   }
 
@@ -7295,6 +7305,11 @@ html:has(.drawer-toggle:checked) {
   }
 
   .lg\:prose-lg :where(.lg\:prose-lg > :last-child):not(:where([class~="not-prose"],[class~="not-prose"] *)) {
+    margin-bottom: 0;
+  }
+
+  .lg\:prose-lg :where(blockquote p):not(:where([class~="not-prose"],[class~="not-prose"] *)) {
+    margin-top: 0;
     margin-bottom: 0;
   }
 }
